// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentChildren Can be mounted 1`] = `
<CurrentChildrenProvider>
  <div>
    Id: 
    1
  </div>
</CurrentChildrenProvider>
`;

exports[`CurrentChildren matches snapshot 1`] = `
<ContextProvider
  value={Array []}
/>
`;

exports[`CurrentChildren reloads when content is restored 1`] = `
<CurrentChildrenProvider>
  <div
    key="1"
  >
    Id: 
    1
    , Name: 
    name
  </div>
</CurrentChildrenProvider>
`;

exports[`CurrentChildren reloads when content is restored 2`] = `
<CurrentChildrenProvider>
  <div
    key="1"
  >
    Id: 
    1
    , Name: 
    name
  </div>
  <div
    key="2"
  >
    Id: 
    2
    , Name: 
    restored
  </div>
</CurrentChildrenProvider>
`;

exports[`CurrentChildren reloads when new content is created 1`] = `
<CurrentChildrenProvider>
  <div
    key="1"
  >
    Id: 
    1
    , Name: 
    name
  </div>
</CurrentChildrenProvider>
`;

exports[`CurrentChildren reloads when new content is created 2`] = `
<CurrentChildrenProvider>
  <div
    key="1"
  >
    Id: 
    1
    , Name: 
    name
  </div>
  <div
    key="123"
  >
    Id: 
    123
    , Name: 
    something
  </div>
</CurrentChildrenProvider>
`;

exports[`CurrentChildren reloads when new content is deleted 1`] = `
<CurrentChildrenProvider>
  <div
    key="1"
  >
    Id: 
    1
    , Name: 
    name
  </div>
</CurrentChildrenProvider>
`;

exports[`CurrentChildren reloads when new content is deleted 2`] = `<CurrentChildrenProvider />`;

exports[`CurrentChildren reloads when new content is moved 1`] = `
<CurrentChildrenProvider>
  <div
    key="1"
  >
    Id: 
    1
    , Name: 
    name
  </div>
</CurrentChildrenProvider>
`;

exports[`CurrentChildren reloads when new content is moved 2`] = `<CurrentChildrenProvider />`;

exports[`CurrentChildren reloads when new content is uploaded under current content 1`] = `
<CurrentChildrenProvider>
  <div
    key="1"
  >
    Id: 
    1
    , Name: 
    name
  </div>
</CurrentChildrenProvider>
`;

exports[`CurrentChildren reloads when new content is uploaded under current content 2`] = `
<CurrentChildrenProvider>
  <div
    key="1"
  >
    Id: 
    1
    , Name: 
    name
  </div>
</CurrentChildrenProvider>
`;
